<?xml version="1.0"?>
<package format="2">
  <name>yolo_ekf</name>
  <version>0.0.0</version>
  <description>
    Extended Kalman Filter Application for 2D Image Segmentation
  </description>
  <maintainer email="slabban2@gmail.com">Samer Labban</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>darknet_ros</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>message_filters</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>